--- a/options/options.html
+++ b/options/options.html
@@ -9,6 +9,7 @@
     <input type="text" id="color"/>
     <button id="save">Save</button>
     <div id="status"></div>
+    <script src="/node_modules/webextension-polyfill/dist/browser-polyfill.js"></script>
     <script src="options.js"></script>
   </body>
 </html>
